# personal-knowledge-os

./: .env.example  .gitignore  .pre-commit-config.yaml  .prettierignore  ARCHITECTURE.md  GOAL.md  README.md  ROADMAP.md  eslint.config.js  package-lock.json  package.json  pyproject.toml  test_api.db
.agents/: backend-agent.md  frontend-agent.md  quality-agent.md  repo-architect.md
.agents/skills/pkos-backend-api/: SKILL.md
.agents/skills/pkos-dev-workflow/: SKILL.md
.agents/skills/pkos-quality-gate/: SKILL.md
.codex/skills/pkos-frontend-desktop/: SKILL.md
apps/api/: environment.yml  requirements.txt  test_notes.db  test_search.db
apps/api/app/: main.py
apps/api/app/api/: chat.py  classify.py  ingest.py  notes.py  search.py
apps/api/app/core/: config.py  database.py
apps/api/app/models/: __init__.py  note.py
apps/api/app/schemas/: note.py
apps/api/app/services/: classification_service.py  embedding_service.py  llm_service.py
apps/api/tests/: test_chat.py  test_classify.py  test_notes.py  test_search.py
apps/desktop/: index.html  package.json  tailwind.config.ts  vite.config.ts
apps/desktop/src/: App.vue  api.ts  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src/stores/: notes.ts
docs/: architecture.md
infra/docker/: docker-compose.yml
services/embeddings/: README.md
services/ml/: README.md  train.py
services/ml/model/: classifier.keras  labels.json
