[package]
name = "personal-knowledge-os"
version = "0.1.0"
description = "Personal Knowledge OS desktop shell"
authors = ["Personal Knowledge OS"]
edition = "2021"

[lib]
name = "personal_knowledge_os_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
